      classes to the wrapper and element into 'add_standard_wrapper_classes' and
      'add_standard_element_classes', because B3.0 now wants 'has-error' and
      'has-warning' instead of the former 'error' class. 'control-group' was
      changed to 'form-group'. The 'form-control' class has been added to
      text, passowrd, textarea, and select fields.

0.40028 Sat Sep 21, 2013
   Fixed bug when rendering blocks with 'run' (results)
   Sort the deflated values of SelectCSV field
   Allow passing Email::Valid params to Email field
   Typos fixed
   Add 'use_init_obj_when_no_accessor_in_item' flag for dual-purpose init_obj

0.40027 Thu Aug 8, 2013
   Add 'options_ref' method for using options in TT templates
   Add unique messages to field messages hash

0.40026 Wed Jul 3, 2013
   Add Italian message file
   Doc tweaks
   Add errors_by_id and errors_by_name convenience methods

0.40025 Thu May 9, 2013
   Add skip in t/setup_form_config.t unless YAML::Syck (Config::Any)

0.40024 Tue May 7, 2013
   Add 'no_option_validation' flag to select field.
   Remove HtmlArea field. (Has always been broken, and there were complaints about
      not prereqing HTML::Tidy, which I won't do due to difficulty of installing)
   Change 'use' of GD::SecurityImage to a 'require'. (Will not prereq this one either.)

0.40023 Tue Apr 30, 2013
   Add Brazilian Portuguese translation file
   Fix bug in process of re-loading repeatables without primary keys after db update
   Add TextCSV field for multiple values in a text field (useful with js libraries)

0.40022 Mon Mar 18, 2013
   Remove 'writeonly' flag from Display field, because fix to not pull
      values from an item/init_object with that flag  meant that values were not
      being applied to Display fields, when people were relying on that.
   Switch to using github issues instead of RT

0.40021 Mon Mar 4, 2013
   Don't validate disabled fields
   check for existence of field in match_when before getting $field->fif,