@@ -16,6 +16,11 @@ has 'email_valid_params' => (
     isa => 'HashRef',
 );
 
+has 'preserve_case' => (
+    is => 'rw',
+    isa => 'Bool',
+);
+
 sub get_class_messages  {
     my $self = shift;
     return {
@@ -27,7 +32,12 @@ sub get_class_messages  {
 apply(
     [
         {
-            transform => sub { lc( $_[0] ) }
+            transform => sub {
+                my ( $value, $field ) = @_;
+                return $value
+                    if $field->preserve_case;
+                return lc( $value );
+            }
         },
         {
             check => sub {
@@ -58,6 +68,9 @@ instead of type="text"
 This field has an 'email_valid_params' attribute that accepts a hash
 reference of extra values passed to L<Email::Valid/address> when
 validating email addresses.
+
+If you want to preserve the case of the email address, set the
+'preserve_case' attribute.
 
 =head1 DEPENDENCIES
 
